# CloudScope

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  COMPLIANCE_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  REPOSITORY_SUMMARY.md  SECURITY.md  compliance_gap_analyzer.py  compliance_implementation_checklist.md  docker-compose.yml  final_save_script.sh  init-repo.py  next_steps_script.sh  pyproject.toml  pytest.ini  quick_create_compliance.sh  quickstart.sh  requirements-dev.txt  requirements.txt  save_gap_analyzer.sh  setup.py  setup.sh
.github/workflows/: ci-cd-compliance.yml  ci.yml  powershell-ci.yml  security.yml
.kiro/rules/: check_compliance.py  compliance.yaml
.kiro/specs/modular-architecture/: compliance_as_code.md  design.md  faq.md  integrated_kiro_framework.md  kiro_rules.md  onboarding_kiro_rules.md  quickstart_guide.md  requirements.md  tasks.md  technical_notes.md  troubleshooting_guide.md
.kiro/specs/powershell-cloud-integration/: design.md  requirements.md  tasks.md
.kiro/steering/: README.md  cdfi-integration.md  compliance-as-code-strategy.md  compliance-documentation.md  compliance-phases.md  compliance-testing.md  lean-stack-principles.md  monitoring-alerts.md  pci-compliance.md  shared-responsibility.md  soc2-security-controls.md  tdd-practices.md
cloudscope/: main.py
cloudscope/cli/: __init__.py  compliance_commands.py
cloudscope/domain/models/: asset.py  compliance.py  finding.py
cloudscope/infrastructure/compliance/: __init__.py  analysis.py  context.py  crypto.py  decorators.py  exceptions.py  monitoring.py
cloudscope/ports/compliance/: __init__.py  compliance_checker.py
collectors/powershell/microsoft-365/: Get-M365Assets.ps1
config/: cloudscope-config.example.json  m365-config.example.json
core/api/: main.py
docs/: ARCHITECTURE.md  COMPLIANCE.md  CONFIGURATION_GUIDE.md  IMPLEMENTATION_PLAN_MAPPING.md  INSTALLATION_GUIDE.md  MONITORING_GUIDE.md  SCRIPTS_DOCUMENTATION.md  TECHNICAL_NOTES.md  ai_tools_compliance_comparison.md  compliance_replication_guide.md  replication_checklist.md
examples/: compliance_integration_demo.py  compliance_models.py
powershell/: .gitignore  CloudScope.ps1  INSTALL.md  Invoke-CloudScopeTests.ps1  QUICKSTART.md  README.md  Requirements.psd1  Setup-CloudScope.ps1  config.example.json  config.template.json
powershell/CloudScope/Core/: CloudScope.Core.psd1  CloudScope.Core.psm1
powershell/CloudScope/Tests/: Test-Environment.Tests.ps1
powershell/CloudScope/Tools/: Test-Environment.ps1
powershell/Examples/: Example-CostOptimization.ps1  Example-GDPRComplianceCheck.ps1  Example-Visualizations.ps1
powershell/Modules/CloudScope.Compliance/: CloudScope.Compliance.psd1  CloudScope.Compliance.psm1  ComplianceFrameworks.psm1
powershell/Pipelines/: azure-pipelines.yml  github-actions.yml
powershell/Tests/: CloudScope.Compliance.Tests.ps1  CloudScope.Graph.Tests.ps1  CloudScope.Monitoring.Tests.ps1
scripts/analysis/: risk-analyzer.sh
scripts/api/: manage-api.sh
scripts/backup/: backup-restore.sh
scripts/collectors/: run-all-collectors.sh
scripts/compliance/: compliance-scanner.sh
scripts/config/: config-manager.sh
scripts/database/: init-memgraph.sh
scripts/deployment/: deploy-production.sh
scripts/development/: dev-helper.sh
scripts/export/: siem-export.sh
scripts/integrations/: external-integrations.sh
scripts/monitoring/: health-monitor.sh
scripts/powershell/: Manage-Collectors.ps1
scripts/reports/: generate-reports.sh
scripts/setup/: install-dependencies.sh
scripts/testing/: run-tests.sh
scripts/troubleshooting/: diagnose.sh
scripts/utils/: cloudscope-util.sh
src/adapters/collectors/: __init__.py  (+1 more)
src/cli/: __init__.py  main.py  utils.py
src/plugins/: __init__.py  base.py  manager.py  rate_limiter.py
src/ports/: __init__.py  collector.py  exporter.py  repository.py
tests/: __init__.py
tests/infrastructure/: test_compliance_analysis.py  test_compliance_decorators.py  test_compliance_monitoring.py
(+35 files in other folders)
